--- a/as3.html
+++ b/as3.html
@@ -10,8 +10,10 @@
     </head>
 
 <body>
+    <div style="text-align: center;">
     <div class="header">
     <h2>Assignment 3: P5 + Arrays</h2>
+    </div>
     </div>
 
 <!-- https://www.w3schools.com/jsref/jsref_obj_array.asp -->
