--- a/as3.html
+++ b/as3.html
@@ -4,13 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>SCTM2005</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="as3.css">
         <script src="as3.js"></script>
         <script src="p5.min.js"></script>
     </head>
 
 <body>
-    <div style="text-align: center;">
     <div class="header">
     <h2>Assignment 3: P5 + Arrays</h2>
     </div>
