--- a/as4.html
+++ b/as4.html
@@ -11,6 +11,6 @@
 
 <body>
     <div class="header">
-    <h2>Assignment 3: P5 + Arrays</h2>
+    <h2>Assignment 4: "Text Adventure" in P5.js with Events</h2>
     </div>
     </div>
